@@ -23,6 +23,7 @@
 - Draw a progress bar on the terminal by inversing colors behind status
   line.
 - Rework the format of the status line to be more compact and consistent.
+- Rework smart tag printout for adapting to terminal width.
 - Clip decode tables for large amplification with fixed-point decoders.
   Without that, high-pitched distortion enters really quickly when
   trying to increase volume even if output samples would not be clipped,
